--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,9 @@
-const { resolve } = require('path');
+// na raiz do projeto
+const path = require('path');
 
 module.exports = {
-  config: resolve(__dirname, 'src/configs/db.js'),
-  'models-path': resolve(__dirname, 'src/apps/models'), // ou ajuste se não usar models
-  'migrations-path': resolve(__dirname, 'src/database/migrations'),
-  'seeders-path': resolve(__dirname, 'src/database/seeders'), // adicione essa pasta se ainda não existir
+  'config':           path.resolve(__dirname, 'config', 'config.js'),
+  'models-path':      path.resolve(__dirname, 'src', 'models'),
+  'migrations-path':  path.resolve(__dirname, 'src', 'database', 'migrations'),
+  'seeders-path':     path.resolve(__dirname, 'src', 'database', 'seeders')
 };
